Fixed placeholder being too small at start

--- a/assets/css/formBuilder.css
+++ b/assets/css/formBuilder.css
@@ -248,7 +248,7 @@
 	position:absolute;
 	top:0px;
 	left:6px;
-	padding-right:6px;
+	margin-right:6px;
 	font-size:0.9em;
 	color:#999;
 }
